--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "author": "Firman Arif Riyadi",
   "license": "ISC",
   "dependencies": {
+    "basic-auth": "^2.0.1",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "password-validator": "^5.3.0",
     "pg-promise": "^11.4.3"
   },
   "devDependencies": {
